# FinanceAgent

./: .gitignore  README.md  agent.json  agent.yaml  pyproject.toml
src/: server.py
